[BUG #6314] The api viewer now uses the same data model for list and content which makes the sorting much easier and the code more readable.

--- a/component/standalone/website/api/api.css
+++ b/component/standalone/website/api/api.css
@@ -76,8 +76,8 @@ p {
   margin-top: 5px;
 }
 
-.method > h2, .method > p, .method > h4, .method > ul, .method > ul > li, .method > div, .method > pre,
-.module > h1, .module > p, .module > pre, .module > ul {
+.method > h2, .method > p, .method > h4, .method > ul, .method > ul > li, .method > div, .method > pre, .method > code,
+.module > h1, .module > p, .module > pre, .module > ul , .module > code {
   margin-left: 8px;
 }
 
